--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         "email": "aequasi@gmail.com"
     },
     "require":      {
-        "php":                           "^5.5|^7",
+        "php":                           "^7.2",
         "symfony/framework-bundle":      "^2.7|^3.0",
         "doctrine/cache":                "^1.3",
         "aequasi/psr-6-doctrine-bridge": "^1.2",
